--- a/Labs/Herrera_Christian_Lab5.ipynb
+++ b/Labs/Herrera_Christian_Lab5.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "U8xG0kttpdP6",
    "metadata": {
     "id": "U8xG0kttpdP6"
@@ -96,24 +96,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Student name: Alice\n",
-      "Student age: 20\n"
+      "Student name: Christian\n",
+      "Student age: 78\n"
      ]
     }
    ],
    "source": [
     "class Student:\n",
+    "    # Set up the student info\n",
     "    def __init__(self, name, age):\n",
     "        self.name = name\n",
     "        self.age = age\n",
     "\n",
+    "    # Print the student info\n",
     "    def display(self):\n",
     "        print(\"Student name:\", self.name)\n",
     "        print(\"Student age:\", self.age)\n",
     "\n",
     "\n",
-    "# Example usage\n",
-    "student1 = Student(\"Alice\", 20)\n",
+    "# Make a student object\n",
+    "student1 = Student(\"Christian\", 78)\n",
+    "\n",
+    "# Run the method\n",
     "student1.display()"
    ]
   },
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "LCPapmVGtB3Q",
    "metadata": {
     "colab": {
@@ -197,11 +201,13 @@
    ],
    "source": [
     "class Car:\n",
+    "    # Set up the car info.\n",
     "    def __init__(self, make, model, year):\n",
     "        self.make = make\n",
     "        self.model = model\n",
     "        self.year = year\n",
     "\n",
+    "    # Print the car info.\n",
     "    def print_description(self):\n",
     "        print(\"Car description:\")\n",
     "        print(\"Make:\", self.make)\n",
@@ -209,11 +215,11 @@
     "        print(\"Year:\", self.year)\n",
     "\n",
     "\n",
-    "# Create an object of the Car class\n",
+    "# Make a car object.\n",
     "my_car = Car(\"Toyota\", \"Corolla\", 2020)\n",
     "\n",
-    "# Call the method to print its description\n",
-    "my_car.print_description()\n"
+    "# Run the meethod.\n",
+    "my_car.print_description()"
    ]
   },
   {
@@ -260,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "PK3XWtWjpqxD",
    "metadata": {
     "id": "PK3XWtWjpqxD"
@@ -268,38 +274,45 @@
    "outputs": [],
    "source": [
     "class BankAccount:\n",
+    "    # Set up account info.\n",
     "    def __init__(self, account_number, balance):\n",
     "        self.account_number = account_number\n",
     "        self.balance = balance\n",
     "\n",
+    "    # Add money to the account.\n",
     "    def deposit(self, amount):\n",
     "        self.balance = self.balance + amount\n",
-    "        print(\"Deposited:\", amount)\n",
-    "        print(\"New balance:\", self.balance)\n",
+    "        print(\"You made a deposit of the amount:\", amount)\n",
+    "        print(\"Your new balance is:\", self.balance)\n",
     "\n",
+    "    # Cash out.\n",
     "    def withdraw(self, amount):\n",
     "        self.balance = self.balance - amount\n",
-    "        print(\"Withdrew:\", amount)\n",
-    "        print(\"New balance:\", self.balance)\n",
-    "\n",
-    "\n",
-    "# Example usage\n",
-    "my_account = BankAccount(\"123456789\", 500)\n",
-    "\n",
-    "my_account.deposit(200)\n",
-    "my_account.withdraw(100)\n"
+    "        print(\"You made a withdrawl of the amount:\", amount)\n",
+    "        print(\"Your new balance is:\", self.balance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "l_Y72KGppxFh",
    "metadata": {
     "id": "l_Y72KGppxFh"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You made a deposit of the amount: 500\n",
+      "Your new balance is: 1500\n",
+      "You made a withdrawl of the amount: 300\n",
+      "Your new balance is: 1200\n"
+     ]
+    }
+   ],
    "source": [
-    "# Example usage:\n",
+    "# Example\n",
     "account = BankAccount(\"12345\", 1000)\n",
     "account.deposit(500)\n",
     "account.withdraw(300)\n"
@@ -382,19 +395,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "EKjbiRAIvYKY",
    "metadata": {
     "id": "EKjbiRAIvYKY"
    },
    "outputs": [],
    "source": [
-    "\n"
+    "class BankAccount:\n",
+    "    # Basic account stuff.\n",
+    "    def __init__(self, account_number, name, balance):\n",
+    "        self.account_number = account_number\n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "    # Put money in.\n",
+    "    def deposit(self, amount):\n",
+    "        new_total = self.balance + amount   # could do it in one line, just keeping it clear\n",
+    "        self.balance = new_total\n",
+    "        print(f\"{self.name} deposited ${amount}\")\n",
+    "        print(f\"New balance is: ${self.balance}\")\n",
+    "    # Take money out (if they actually have it).\n",
+    "    def withdraw(self, amount):\n",
+    "        if self.balance >= amount:\n",
+    "            self.balance = self.balance - amount\n",
+    "            print(f\"{self.name} withdrew ${amount}.\")\n",
+    "            print(\"Balance now:\", self.balance)\n",
+    "        else:\n",
+    "            print(f\"{self.name} has no money.\")\n",
+    "            print(f\"Current balance: ${self.balance}\")\n",
+    "    # Check what is left.\n",
+    "    def get_balance(self):\n",
+    "        current_balance = self.balance\n",
+    "        print(f\"{self.name}'s balance right now: ${current_balance}\")\n",
+    "\n",
+    "    # Send money to another account\n",
+    "    def transfer(self, amount, recipient_account):\n",
+    "        if self.balance >= amount:\n",
+    "            self.balance = self.balance - amount\n",
+    "\n",
+    "            # add to the other account\n",
+    "            recipient_account.balance = recipient_account.balance + amount\n",
+    "\n",
+    "            print(f\"Transferred ${amount} to {recipient_account.name}.\")\n",
+    "            print(f\"{self.name}'s new balance: ${self.balance}\")\n",
+    "        else:\n",
+    "            print(f\"Transfer failed: {self.name} is broke.\")\n",
+    "            print(\"Still got:\", self.balance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "Z6M5u-jCtEBB",
    "metadata": {
     "colab": {
@@ -418,17 +469,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "John Doe, your new balance after deposit is: $1200\n",
-      "John Doe, your new balance after withdrawal is: $700\n",
-      "Transferred $200 to Jane Doe. Your new balance is: $500\n"
+      "Accounts created successfully!\n",
+      "Account 1 holder: Alice\n",
+      "Account 2 holder: Bob\n",
+      "Alice's balance right now: $500\n",
+      "Bob's balance right now: $300\n",
+      "Alice deposited $200\n",
+      "New balance is: $700\n",
+      "Alice withdrew $100.\n",
+      "Balance now: 600\n",
+      "Transferred $250 to Bob.\n",
+      "Alice's new balance: $350\n",
+      "Alice's balance right now: $350\n",
+      "Bob's balance right now: $550\n"
      ]
     }
    ],
    "source": [
     "# Creating BankAccount instances and demonstrating functionality\n",
+    "account1 = BankAccount(\"1001\", \"Alice\", 500)\n",
+    "account2 = BankAccount(\"1002\", \"Bob\", 300)\n",
+    "\n",
+    "print(\"Accounts created successfully!\")\n",
+    "print(\"Account 1 holder:\", account1.name)\n",
+    "print(\"Account 2 holder:\", account2.name)\n",
     "\n",
     "\n",
-    "# Demonstrating account operations\n"
+    "# Demonstrating account operations\n",
+    "account1.get_balance()\n",
+    "account2.get_balance()\n",
+    "\n",
+    "account1.deposit(200)\n",
+    "account1.withdraw(100)\n",
+    "\n",
+    "account1.transfer(250, account2)\n",
+    "\n",
+    "# Hopefully the calculations are correct. \n",
+    "# I am willing to accept any left over money. \n",
+    "account1.get_balance()\n",
+    "account2.get_balance()"
    ]
   },
   {
@@ -518,12 +597,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "dFgG96sLx0Gj",
    "metadata": {
     "id": "dFgG96sLx0Gj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (4251378646.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[49], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    Picky's mood is now: curious\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "Picky's mood is now: curious\n",
     "Picky is playing hide-and-seek!\n",
@@ -542,30 +630,73 @@
    },
    "outputs": [],
    "source": [
-    "# Define the Pickaboo class\n"
+    "# Pickaboo thing\n",
+    "class Pickaboo:\n",
+    "    mood_choices = [\"happy\", \"curious\", \"sneaky\", \"angry\"]\n",
+    "\n",
+    "    # Set it up\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.mood = \"happy\"\n",
+    "        self.orb_colors = [\"blue\", \"pink\", \"purple\"]\n",
+    "        self.energy_level = 100\n",
+    "\n",
+    "    # Change mood\n",
+    "    def change_mood(self, new_mood):\n",
+    "        if new_mood not in self.mood_choices:\n",
+    "            print(\"Invalid mood.\")\n",
+    "            return\n",
+    "        self.mood = new_mood\n",
+    "        # mood tax / bonus\n",
+    "        if new_mood == \"angry\":\n",
+    "            self.energy_level = self.energy_level - 20\n",
+    "        elif new_mood == \"happy\":\n",
+    "            self.energy_level = self.energy_level + 10\n",
+    "\n",
+    "        # Stop it from exploding\n",
+    "        if self.energy_level > 100:\n",
+    "            self.energy_level = 100\n",
+    "        if self.energy_level < 0:\n",
+    "            self.energy_level = 0\n",
+    "        print(f\"{self.name}'s mood is now: {self.mood}\")\n",
+    "        print(f\"{self.name}'s energy level is: {self.energy_level}\")\n",
+    "\n",
+    "    # Sneaky mode\n",
+    "    def play_hide_and_seek(self):\n",
+    "        if self.energy_level < 30:\n",
+    "            print(f\"{self.name} is too tired to play.\")\n",
+    "            return\n",
+    "        print(f\"{self.name} is playing hide-and-seek!\")\n",
+    "        self.energy_level = self.energy_level - 15\n",
+    "        self.mood = \"sneaky\"\n",
+    "        print(f\"{self.name}'s energy level is now: {self.energy_level}\")\n",
+    "\n",
+    "    # Juice up\n",
+    "    def recharge(self):\n",
+    "        print(f\"{self.name} is recharging...\")\n",
+    "        self.energy_level = self.energy_level + 30\n",
+    "        # No red bull\n",
+    "        if self.energy_level > 100:\n",
+    "            self.energy_level = 100\n",
+    "        self.mood = \"happy\"\n",
+    "        print(f\"{self.name}'s energy level is now: {self.energy_level}\")\n",
+    "\n",
+    "    # pretty lights\n",
+    "    def glow_orbs(self):\n",
+    "        colors_to_glow = self.orb_colors.copy()\n",
+    "\n",
+    "        # angry DLC color\n",
+    "        if self.mood == \"angry\":\n",
+    "            colors_to_glow.append(\"red\")\n",
+    "\n",
+    "        print(f\"{self.name}'s orbs are glowing in these colors: {colors_to_glow}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rcH2maixxK0G",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 240,
-     "status": "ok",
-     "timestamp": 1727982257328,
-     "user": {
-      "displayName": "Masoud Rostami",
-      "userId": "15391601920485146188"
-     },
-     "user_tz": 300
-    },
-    "id": "rcH2maixxK0G",
-    "outputId": "031b9439-65b3-46f4-a9f4-01b1f2b0b8ad"
-   },
+   "id": "accd7e68",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -582,8 +713,23 @@
     }
    ],
    "source": [
-    "# Create an instance of the Pickaboo class\n"
+    "# Create him\n",
+    "pickaboo1 = Pickaboo(\"Picky\")\n",
+    "\n",
+    "# Create an instance of the Pickaboo class\n",
+    "pickaboo1.change_mood(\"curious\")\n",
+    "pickaboo1.play_hide_and_seek()\n",
+    "pickaboo1.recharge()\n",
+    "pickaboo1.glow_orbs()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c20f3603",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
