--- a/Homework/Christian_Herrera_HW5.ipynb
+++ b/Homework/Christian_Herrera_HW5.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -186,7 +186,16 @@
     },
     "id": "Uyv2j8X7KyiG"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: How to pet Cats, Author: Christian Herrera, ISBN: 0118 999 881 999 119 725 3\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "class Book:\n",
     "    def __init__(self, title:str, author:str, isbn:str, total_pages:int):\n",
@@ -196,15 +205,18 @@
     "        self.total_pages = int(total_pages)\n",
     "        \n",
     "    def get_book_info(self):\n",
-    "        print(f'Title: {self.title}')\n",
-    "        print(f'Author: {self.author}')\n",
-    "        print(f'ISBN: {self.isbn}')\n",
+    "        return f'Title: {self.title}, Author: {self.author}, ISBN: {self.isbn}'\n",
     "    \n",
     "    def is_long_book(self):\n",
     "        if self.total_pages > 500:\n",
     "            return True\n",
     "        else:\n",
-    "            return False\n"
+    "            return False\n",
+    "        \n",
+    "book1 = Book('How to pet Cats', 'Christian Herrera', '0118 999 881 999 119 725 3', 5020)\n",
+    "\n",
+    "print(book1.get_book_info())\n",
+    "print(book1.is_long_book())"
    ]
   },
   {
@@ -257,24 +269,31 @@
     },
     "id": "kpoW4ESFLIS7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.0\n",
+      "212.0\n"
+     ]
+    }
+   ],
    "source": [
+    "class TemperatureConverter:\n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
     "\n",
+    "    def fahrenheit_to_celsius(self, f):\n",
+    "        return (f - 32) * 5 / 9\n",
     "\n",
+    "    def celsius_to_fahrenheit(self, c):\n",
+    "        return (c * 9 / 5) + 32\n",
+    "    \n",
+    "converter = TemperatureConverter()\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(converter.fahrenheit_to_celsius(212))\n",
+    "print(converter.celsius_to_fahrenheit(100))"
    ]
   },
   {
@@ -322,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -336,26 +355,41 @@
     },
     "id": "htwVWx7KLWqK"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length: 2\n",
+      "Width: 4\n",
+      "Area: 8\n",
+      "Perimeter 12\n",
+      "Is a square: False\n"
+     ]
+    }
+   ],
    "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length \n",
+    "        self.width = width\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "    def perimeter(self):\n",
+    "        return 2 * (self.length) + 2 * (self.width)\n",
+    "    def is_square(self):\n",
+    "        if self.length == self.width:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
     "\n",
+    "rectangle1 = Rectangle(2,4)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print('Length:', rectangle1.length)\n",
+    "print('Width:', rectangle1.width)\n",
+    "print('Area:', rectangle1.area())\n",
+    "print('Perimeter', rectangle1.perimeter())\n",
+    "print('Is a square:', rectangle1.is_square())"
    ]
   },
   {
@@ -403,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -417,28 +451,43 @@
     },
     "id": "NN6wSuclLhRN"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92.6\n",
+      "Added 84\n",
+      "Name: Spongebob \n",
+      "Age: 23 \n",
+      "Average Grade: 91.16666666666667\n"
+     ]
+    }
+   ],
    "source": [
+    "class Student:\n",
+    "    def __init__(self, name:str, age:int, grades:list):\n",
+    "        self.name = name\n",
+    "        self.age = int(age)\n",
+    "        self.grades = list(grades)\n",
     "\n",
+    "    def average_grade(self):\n",
+    "        return sum(self.grades)/len(self.grades)\n",
+    "    \n",
+    "    def add_grade(self, grade):\n",
+    "        print(f'Added {grade}')\n",
+    "        self.grades.append(grade)    \n",
+    "        \n",
+    "    def get_student_info(self):\n",
+    "        return f'Name: {self.name} \\nAge: {self.age} \\nAverage Grade: {sum(self.grades)/len(self.grades)}'\n",
+    "    \n",
+    "sample_grades = [90, 97, 99, 85, 92]\n",
     "\n",
+    "student1 = Student('Spongebob', 23, sample_grades)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "print(student1.average_grade())\n",
+    "student1.add_grade(84)\n",
+    "print(student1.get_student_info())\n",
     "\n"
    ]
   },
@@ -502,25 +551,18 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "class Employee: \n",
+    "    def __init__(self, name, id_number, position, salary):\n",
+    "        self.name = name\n",
+    "        self.id_number = id_number\n",
+    "        self.position = position\n",
+    "        self.salary = salary\n",
+    "    def update_position(self, new_position):\n",
+    "        print(f'Congratulations! You have been promoted from {self.position} to {new_position}!')\n",
+    "        self.position = new_position\n",
+    "    def apply_raise(self, percentage):\n",
+    "        print(f'Congratulations! Your salary has been increased by {percentage}')\n",
+    "        self.salary = self.salary + self.salary*percentage\n",
     "\n"
    ]
   },
