--- a/Homework/Christian_Herrera_HW5.ipynb
+++ b/Homework/Christian_Herrera_HW5.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 230,
@@ -107,6 +107,7 @@
    "source": [
     "class Calculator:\n",
     "    def __init__(self) -> None:\n",
+    "        # The calculator\n",
     "        pass\n",
     "    def add(self, x,y):\n",
     "        return x + y\n",
@@ -116,12 +117,14 @@
     "        return x * y\n",
     "    def divide(self, x,y):\n",
     "        if y == 0:\n",
-    "            return \"Cannot divide by zero.\"\n",
+    "            return \"Cannot divide by zero.\" # Illegal. \n",
     "        else:\n",
     "            return x / y\n",
-    "    \n",
+    "\n",
+    "# Creating the instance. \n",
     "calculator1 = Calculator()\n",
     "\n",
+    "# Testing all the functions. \n",
     "print(calculator1.add(4,2))\n",
     "print(calculator1.subtract(4,2))\n",
     "print(calculator1.multiply(4,2))\n",
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -199,22 +202,27 @@
    "source": [
     "class Book:\n",
     "    def __init__(self, title:str, author:str, isbn:str, total_pages:int):\n",
+    "        # Initializing the class. \n",
     "        self.title = title\n",
     "        self.author = author\n",
     "        self.isbn = isbn\n",
     "        self.total_pages = int(total_pages)\n",
     "        \n",
     "    def get_book_info(self):\n",
+    "        # Retunrning the book info. \n",
     "        return f'Title: {self.title}, Author: {self.author}, ISBN: {self.isbn}'\n",
     "    \n",
     "    def is_long_book(self):\n",
+    "        # Is it too long? \n",
     "        if self.total_pages > 500:\n",
     "            return True\n",
     "        else:\n",
     "            return False\n",
-    "        \n",
+    "\n",
+    "# Creating the class instance.\n",
     "book1 = Book('How to pet Cats', 'Christian Herrera', '0118 999 881 999 119 725 3', 5020)\n",
     "\n",
+    "# Demonstrating. \n",
     "print(book1.get_book_info())\n",
     "print(book1.is_long_book())"
    ]
@@ -255,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -282,16 +290,19 @@
    "source": [
     "class TemperatureConverter:\n",
     "    def __init__(self) -> None:\n",
+    "        # Creating the class. \n",
     "        pass\n",
     "\n",
     "    def fahrenheit_to_celsius(self, f):\n",
-    "        return (f - 32) * 5 / 9\n",
+    "        return (f - 32) * 5 / 9 # f -> c\n",
     "\n",
     "    def celsius_to_fahrenheit(self, c):\n",
-    "        return (c * 9 / 5) + 32\n",
+    "        return (c * 9 / 5) + 32 # c -> f\n",
     "    \n",
+    "# Creating the class instance. \n",
     "converter = TemperatureConverter()\n",
     "\n",
+    "# Demonstrating. \n",
     "print(converter.fahrenheit_to_celsius(212))\n",
     "print(converter.celsius_to_fahrenheit(100))"
    ]
@@ -341,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -371,20 +382,23 @@
    "source": [
     "class Rectangle:\n",
     "    def __init__(self, length, width):\n",
+    "        # Initializing the class. \n",
     "        self.length = length \n",
     "        self.width = width\n",
     "    def area(self):\n",
-    "        return self.length * self.width\n",
+    "        return self.length * self.width # Returning the area. \n",
     "    def perimeter(self):\n",
-    "        return 2 * (self.length) + 2 * (self.width)\n",
+    "        return 2 * (self.length) + 2 * (self.width) # Returning the Perimeter. \n",
     "    def is_square(self):\n",
-    "        if self.length == self.width:\n",
+    "        if self.length == self.width: # Square if true. \n",
     "            return True\n",
     "        else:\n",
     "            return False\n",
     "\n",
+    "# Class instance. \n",
     "rectangle1 = Rectangle(2,4)\n",
     "\n",
+    "# Demonstrating attributes/methods. \n",
     "print('Length:', rectangle1.length)\n",
     "print('Width:', rectangle1.width)\n",
     "print('Area:', rectangle1.area())\n",
@@ -437,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -467,24 +481,28 @@
    "source": [
     "class Student:\n",
     "    def __init__(self, name:str, age:int, grades:list):\n",
+    "        # Initializing the class. \n",
     "        self.name = name\n",
     "        self.age = int(age)\n",
     "        self.grades = list(grades)\n",
     "\n",
     "    def average_grade(self):\n",
-    "        return sum(self.grades)/len(self.grades)\n",
+    "        return sum(self.grades)/len(self.grades) # Average grade. \n",
     "    \n",
     "    def add_grade(self, grade):\n",
     "        print(f'Added {grade}')\n",
-    "        self.grades.append(grade)    \n",
+    "        self.grades.append(grade) # Adding the grade. \n",
     "        \n",
     "    def get_student_info(self):\n",
     "        return f'Name: {self.name} \\nAge: {self.age} \\nAverage Grade: {sum(self.grades)/len(self.grades)}'\n",
     "    \n",
+    "# List of sample grades for the student.     \n",
     "sample_grades = [90, 97, 99, 85, 92]\n",
     "\n",
+    "# Creating the student and passing the sample grades. \n",
     "student1 = Student('Spongebob', 23, sample_grades)\n",
     "\n",
+    "# Demonstrating the attributes and methods. \n",
     "print(student1.average_grade())\n",
     "student1.add_grade(84)\n",
     "print(student1.get_student_info())\n",
@@ -535,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -549,21 +567,51 @@
     },
     "id": "O12VbFa6LhTm"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Congratulations! You have been promoted from Frycook to Cashier!\n",
+      "Congratulations! Your salary has been increased by 50.0%!\n",
+      "Your salary went from 500 to 750.0\n"
+     ]
+    }
+   ],
    "source": [
     "class Employee: \n",
-    "    def __init__(self, name, id_number, position, salary):\n",
+    "    def __init__(self, name, id_number:int, position, salary:int):\n",
+    "        # Creating the employee class. \n",
     "        self.name = name\n",
-    "        self.id_number = id_number\n",
+    "        self.id_number = int(id_number)\n",
     "        self.position = position\n",
-    "        self.salary = salary\n",
+    "        self.salary = int(salary)\n",
+    "    \n",
     "    def update_position(self, new_position):\n",
+    "        # The promotion. \n",
     "        print(f'Congratulations! You have been promoted from {self.position} to {new_position}!')\n",
     "        self.position = new_position\n",
+    "    \n",
     "    def apply_raise(self, percentage):\n",
-    "        print(f'Congratulations! Your salary has been increased by {percentage}')\n",
-    "        self.salary = self.salary + self.salary*percentage\n",
-    "\n"
+    "        # Applying the raise accoring to the instructions. \n",
+    "        old_salary = self.salary\n",
+    "\n",
+    "        if self.salary < 50000:\n",
+    "            increase_amount = self.salary * percentage\n",
+    "            self.salary = self.salary + increase_amount\n",
+    "            print(f'Congratulations! Your salary has been increased by {percentage * 100}%!')\n",
+    "            print(f'Your salary went from {old_salary} to {self.salary}')\n",
+    "        else:\n",
+    "            self.salary = self.salary + 5000\n",
+    "            print('Congratulations! You received a fixed bonus of 5000!')\n",
+    "            print(f'Your salary went from {old_salary} to {self.salary}')\n",
+    "\n",
+    "# The best employee. \n",
+    "employee1 = Employee('SpongeBob', 1, 'Frycook', 500)\n",
+    "\n",
+    "# Giving him a raise. \n",
+    "employee1.update_position('Cashier')\n",
+    "employee1.apply_raise(.50)"
    ]
   },
   {
@@ -592,6 +640,9 @@
     "id": "qZv75lobMWJj"
    },
    "source": [
+    "<b> This cell kept breaking my PDF exporter for some reason, the issue seemed to be the \"----\", so I removed them.</b>\n",
+    "\n",
+    "\n",
     "# **Question 7: Library Management System** (20 Points)\n",
     "\n",
     "Define a class named `Library` that manages a collection of books. The class should have the following attribute:\n",
@@ -602,17 +653,11 @@
     "\n",
     "- `__init__(self)`: Initializes the library's book collection as an empty list.\n",
     "\n",
-    "---\n",
     "- `add_book(self, title, author)`: Adds a new book to the collection. Each book should be represented as a dictionary with keys for `title`, `author`, and `status`. The status of a new book should be set to `'available'`.\n",
     "\n",
-    "-------\n",
     "- `check_out_book(self, title)`: Changes the status of a book to `'checked out'` if it is available. If the book is not found or already checked out, print an appropriate message. If the book is found and its status is `'available'`, update its status to `'checked out'` and print a message confirming that the book has been checked out. If the book is already `'checked out'` or cannot be found in the list, print a message indicating that the book cannot be checked out. **Example**: If the book `'1984'` is available, calling `check_out_book('1984')` will change its status and print:  `\"Book '1984' has been checked out.\"`  If the book is already checked out, it should print:  `\"Book '1984' is not available for checkout.\"`\n",
     "\n",
-    "-----\n",
-    "\n",
     "- `return_book(self, title)`: Changes the status of a book to `'available'` if it is currently checked out. Print a message if the book is not found or is already available.If the book is found and its status is `'checked out'`, update its status to `'available'` and print a message confirming that the book has been returned. If the book is not found or is already `'available'`, print a message indicating that the book cannot be returned. **Example**: If the book `'1984'` is checked out, calling `return_book('1984')` will change its status and print:  \n",
-    "\n",
-    "------\n",
     "\n",
     "- Add a method `display_books(self)` that prints all the books in the library along with their current status.\n",
     "\n",
@@ -621,12 +666,13 @@
     "[\n",
     "    {'title': 'Book Title 1', 'author': 'Author Name', 'status': 'available'},\n",
     "    {'title': 'Book Title 2', 'author': 'Author Name', 'status': 'checked out'}\n",
-    "]\n"
+    "]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -640,34 +686,116 @@
     },
     "id": "jlUIjBNPMH58"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added '1984' by George Orwell\n",
+      "Added 'The Hobbit' by J.R.R. Tolkien\n",
+      "Added 'Dune' by Frank Herbert\n",
+      "Title: 1984, Author: George Orwell, Status: available\n",
+      "Title: The Hobbit, Author: J.R.R. Tolkien, Status: available\n",
+      "Title: Dune, Author: Frank Herbert, Status: available\n",
+      "Book '1984' has been checked out.\n",
+      "Book '1984' is not available for checkout.\n",
+      "Book 'Dracula' is not available for checkout.\n",
+      "Title: 1984, Author: George Orwell, Status: checked out\n",
+      "Title: The Hobbit, Author: J.R.R. Tolkien, Status: available\n",
+      "Title: Dune, Author: Frank Herbert, Status: available\n",
+      "Book '1984' has been returned.\n",
+      "Book '1984' cannot be returned.\n",
+      "Book 'Dracula' cannot be returned.\n",
+      "Title: 1984, Author: George Orwell, Status: available\n",
+      "Title: The Hobbit, Author: J.R.R. Tolkien, Status: available\n",
+      "Title: Dune, Author: Frank Herbert, Status: available\n"
+     ]
+    }
+   ],
    "source": [
+    "class Library:\n",
+    "    def __init__(self):\n",
+    "        # Initializing. \n",
+    "        self.books = []\n",
+    "    \n",
+    "    def add_book(self, title, author):\n",
+    "        # Adding book method. \n",
+    "        new_book = {\n",
+    "            'title': title,\n",
+    "            'author': author,\n",
+    "            'status': 'available'\n",
+    "        }\n",
+    "        self.books.append(new_book)\n",
+    "        print(f\"Added '{title}' by {author}\")\n",
+    "    \n",
+    "    def check_out_book(self, title):\n",
+    "        # Checkout method. \n",
+    "        for book in self.books:\n",
+    "            if book['title'] == title:\n",
+    "                if book['status'] == 'available':\n",
+    "                    book['status'] = 'checked out'\n",
+    "                    print(f\"Book '{title}' has been checked out.\")\n",
+    "                    return\n",
+    "                else:\n",
+    "                    print(f\"Book '{title}' is not available for checkout.\")\n",
+    "                    return\n",
+    "        \n",
+    "        print(f\"Book '{title}' is not available for checkout.\") # Not available. \n",
+    "    \n",
+    "    def return_book(self, title):\n",
+    "        # Giving back the book. \n",
+    "        for book in self.books:\n",
+    "            if book['title'] == title:\n",
+    "                if book['status'] == 'checked out':\n",
+    "                    book['status'] = 'available'\n",
+    "                    print(f\"Book '{title}' has been returned.\")\n",
+    "                    return\n",
+    "                else:\n",
+    "                    print(f\"Book '{title}' cannot be returned.\")\n",
+    "                    return\n",
+    "        \n",
+    "        print(f\"Book '{title}' cannot be returned.\")\n",
+    "    \n",
+    "    def display_books(self):\n",
+    "        # What do we have in the library?\n",
+    "        if len(self.books) == 0:\n",
+    "            print('No books in library.')\n",
+    "        else:\n",
+    "            for book in self.books:\n",
+    "                print(f\"Title: {book['title']}, Author: {book['author']}, Status: {book['status']}\")\n",
     "\n",
+    "# Creating class instance. \n",
+    "library1 = Library()\n",
     "\n",
+    "# Adding books. \n",
+    "library1.add_book('1984', 'George Orwell')\n",
+    "library1.add_book('The Hobbit', 'J.R.R. Tolkien')\n",
+    "library1.add_book('Dune', 'Frank Herbert')\n",
     "\n",
+    "# What do we have?\n",
+    "library1.display_books()\n",
     "\n",
+    "# Reading a lot of books.\n",
+    "library1.check_out_book('1984')\n",
+    "library1.check_out_book('1984')   # already checked out\n",
+    "library1.check_out_book('Dracula')  # not found\n",
     "\n",
+    "# Now what do we have?\n",
+    "library1.display_books()\n",
     "\n",
+    "library1.return_book('1984')\n",
+    "library1.return_book('1984')   # already available\n",
+    "library1.return_book('Dracula')  # not found\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "library1.display_books()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
